trying .destroy() method